<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.movies.MoviesFragment">

    <include
        android:id="@+id/tB_movies"
        layout="@layout/fragment_movie_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_movie_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tB_movies">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tV_moviecV_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/acme"
                        android:gravity="center_vertical"
                        android:textSize="34sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Title of the movie" />

                    <TextView
                        android:id="@+id/tV_moviecV_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tV_moviecV_title"
                        tools:text="2020" />

                    <TextView
                        android:id="@+id/tV_moviecV_18Content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/tV_movieDT_adultContent"
                        app:layout_constraintBottom_toBottomOf="@+id/tV_moviecV_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tV_moviecV_date"
                        app:layout_constraintTop_toTopOf="@+id/tV_moviecV_date"
                        tools:text="+18"
                        tools:visibility="gone" />

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/yP_video"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        app:autoPlay="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tV_moviecV_date">

                    </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

                    <TextView
                        android:id="@+id/tV_youtubeVideoMSG"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@color/black_light"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/tV_youtubeVideoMSG"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/yP_video"
                        app:layout_constraintEnd_toEndOf="@+id/yP_video"
                        app:layout_constraintStart_toStartOf="@+id/yP_video"
                        app:layout_constraintTop_toTopOf="@+id/yP_video" />

                    <HorizontalScrollView
                        android:id="@+id/scroll_cG_genres"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:scrollbars="none"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/yP_video">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/cG_genres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:singleLine="true" />
                    </HorizontalScrollView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/poster_and_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/scroll_cG_genres">

                        <ImageView
                            android:id="@+id/imgV_movieDt_poster"
                            android:layout_width="140dp"
                            android:layout_height="200dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/imgV_movieDt_poster_cD"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/ic_fake_poster" />

                        <TextView
                            android:id="@+id/tV_overview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center_vertical"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/imgV_movieDt_poster"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imgV_movieDt_poster"
                            app:layout_constraintTop_toTopOf="@+id/imgV_movieDt_poster"
                            tools:text="Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man." />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RatingBar
                        android:id="@+id/rB_movieDt_rating"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginTop="16dp"
                        android:isIndicator="true"
                        android:numStars="10"
                        android:progressTint="@color/analog_2"
                        android:rating="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/poster_and_overview"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tV_movieDt_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rB_movieDt_rating"
                        tools:text="9.0 / 10.0" />

                    <TextView
                        android:id="@+id/tV_moviesDt_cast"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/anton"
                        android:text="@string/tV_moviesDt_cast"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tV_movieDt_rating" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rV_movie_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:scrollbarStyle="outsideInset"
                        android:scrollbars="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tV_moviesDt_cast" />



                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <ProgressBar
        android:id="@+id/pgsB_movie_details"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>